2007-08-23 Harri Pitkänen <hatapitk@iki.fi>

	* Change configure.ac to fix build on FreeBSD

2007-08-20 Harri Pitkänen <hatapitk@iki.fi>

	* FreeBSD fix, thanks to Jaakko Heinonen

2007-07-08 Harri Pitkänen <hatapitk@iki.fi>

	* Add option ignore_numbers=n to voikkospell. Change
	  default from 1 to 0 (the library default).
	* Undo 1-to-1 normalisations in spelling suggestions.

2007-06-19 Harri Pitkänen <hatapitk@iki.fi>

	* Add exported functions for freeing the memory
	  allocated for result structures. This is needed
	  in environments where multiple C runtime libraries
	  are used in one process.
	* Increase version numbers for 1.5

2007-06-17 Harri Pitkänen <hatapitk@iki.fi>

	* Generate libvoikko-1.def on Windows to enable
	  dynamic linking of libvoikko-1.dll with code
	  generated using MSVC.
	* Set Finnish locale on Windows to ensure that
	  character case conversions work correctly.

2007-05-07 Harri Pitkänen <hatapitk@iki.fi>

	* Hyphenating "vast'edes" as "vast'e-des" is ugly
	* Hyphenating after ' is wrong
	* Increase version numbers for 1.4.1

2007-04-19 Harri Pitkänen <hatapitk@iki.fi>

	* Check for embedded dots in URL detection
	* Only use URL and number detection when
	  VOIKKO_OPT_NO_UGLY_HYPHENATION is set

2007-04-07 Harri Pitkänen <hatapitk@iki.fi>

	* Add replacement _ -> (any character) to OCR suggestions 

2007-03-28 Harri Pitkänen <hatapitk@iki.fi>

	* Update to Automake 1.10
	* Update version information for version 1.4
	* Avoid using rule based hyphenator with certain strings containing
	  numbers and special characters

2007-02-26 Harri Pitkänen <hatapitk@iki.fi>

	* Fix the option VOIKKO_INTERSECT_COMPOUND_LEVEL, which only worked
	  correctly with values 0 and 1. Bug report and suggested fix by
	  Kalle Lampila.
	* Add option intersect_compound_level=n to voikkohyphenate

2007-02-16 Harri Pitkänen <hatapitk@iki.fi>

	* Add replacement b <-> h to OCR suggestions

2007-02-14 Harri Pitkänen <hatapitk@iki.fi>
